# ngx-rust

./: .git-blame-ignore-revs  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cargo-deny.yaml  ci.yaml  fossa.yaml  nginx.yaml  sanitizers.yaml
examples/: Cargo.toml  async.rs  awssig.rs  config  curl.rs  httporigdst.rs  shared_dict.rs  upstream.rs
examples/auto/: rust
examples/t/: async.t  shared_dict.t
misc/: nginx-sanitizer-support.patch  ubsan-suppressions.txt  update-action-sha.sh
nginx-src/: Cargo.toml  README.md
nginx-src/src/: download.rs  lib.rs  verifier.rs
nginx-sys/: Cargo.toml  README.md
nginx-sys/src/: detail.rs  event.rs  http.rs  lib.rs  queue.rs  rbtree.rs  stream.rs  string.rs
src/: allocator.rs  lib.rs  log.rs  sync.rs
src/async_/: mod.rs  sleep.rs  spawn.rs
src/collections/: mod.rs  queue.rs  rbtree.rs
src/core/: buffer.rs  mod.rs  pool.rs  slab.rs  status.rs  string.rs
src/http/: conf.rs  module.rs  request.rs  status.rs  upstream.rs
tests/: log_test.rs  nginx.conf
