[package]
name = "nginx-sys"
version = "0.5.0"
categories = ["external-ffi-bindings"]
description = "FFI bindings to NGINX"
keywords = ["nginx", "ffi", "sys"]
build = "build/main.rs"
# This field is required to export DEP_NGINX_ vars
# See https://github.com/rust-lang/cargo/issues/3544
links = "nginx"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]

[target.'cfg(not(windows))'.dependencies]
errno = { version = "0.3", default-features = false }

[build-dependencies]
bindgen = "0.71"
cc = "1.2.0"
dunce = "1.0.5"
regex = "1.11.1"
nginx-src = { version = "~1.28.0", optional = true, path = "../nginx-src" }
shlex = "1.3"

[features]
vendored = ["dep:nginx-src"]
